--- a/index.html
+++ b/index.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Etch A Sketch</title>
+    <title>Etch-A-Sketch</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="body">
-      <div class="container"></div>
-      <button class="reset-btn">RESET</button>
-    </div>
+    <div class="body-container">
+      <div class="main-container">
+        <h1 class="title">Etch-A-Sketch</h1>
+        <div class="grid-container"></div>
+      </div>
+      <div class="menu-container">
+        <div class="grid-input">
+          <div><h3 class="input-description">Enter a new grid size</h3></div>
 
+          <div>
+            <input type="text" id="grid-count" />
+            <button class="submit-btn">Submit</button>
+          </div>
+        </div>
+        <button class="clear-btn">Clear</button>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
