--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-A-Sketch</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/e9d9913a0f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="body-container">
@@ -24,6 +28,14 @@
         </div>
         <button class="clear-btn">Clear</button>
       </div>
+    </div>
+    <div class="footer">
+      <footer>
+        Created by Emily
+        <a href="https://github.com/emilyPhee" target="_blank"
+          ><i class="fa-brands fa-github fa-lg"></i
+        ></a>
+      </footer>
     </div>
     <script src="main.js"></script>
   </body>
